# hillstar-orchestrator

./: .gitignore  .pre-commit-verify  CHANGELOG.md  CITATION.cff  LICENSE  README.md  RELEASE_NOTES.md  __init__.py  cli.py  pyproject.toml  requirements.txt  workflow.json
.github/workflows/: docs.yml  licence-check.yml
config/: __init__.py  config.py  model_selector.py  provider_registry.default.json  provider_registry.py  setup_wizard.py
dev/planning/: 2026-03-07_sprint2_auto_chunking_estimator.md  2026-03-07_sprint2_validator_and_registry_fixes.md  2026-03-07_template_resolution_bug.md
docs/: ARCHITECTURE.md  CLAUDE_OPENAI_AUTH_SWITCH.md  MCP_SERVERS.md  MCP_TOPOLOGY.md  OPENAI_HILLSTAR_SETUP.md  OPENAI_SETUP_GUIDE.md  PROVIDERS.md  PROVIDER_MODEL_REFERENCE.md  QUICK_REFERENCE.md  SETUP_GUIDE.md  TEST_COVERAGE_v1.0.0.md  User_Manual.md  agent_scan_presentation.md  coverage.md  coverage_report_v1.0.0_final.md  doc_generator.py  how-to-workflow-data-flow.md
docs/sphinx/: Makefile  conf.py  generate_mcp_rst.py  index.rst
examples/: multi-provider-workflow.json  simple-workflow.json
execution/: __init__.py  checkpoint.py  config_validator.py  cost_manager.py  graph.py  model_selector.py  node_executor.py  observability.py  runner.py  trace.py
governance/: __init__.py  compliance.py  enforcer.py  hooks.py  policy.py  project_init.py
mcp-server/: anthropic_mcp_server.py  base_mcp_server.py  claude_ollama_bridge_server.py  devstral_local_mcp_server.py  file_operations_mcp_server.py  google_ai_studio_mcp_server.py  jan_code_local_mcp_server.py  mistral_mcp_server.py  ollama_mcp_server.py  openai_mcp_server.py  run_with_env.sh  secure_logger.py  test_servers.sh
models/: __init__.py  anthropic_mcp_model.py  anthropic_model.py  anthropic_ollama_api_model.py  devstral_local_model.py  jan_code_local_model.py  mcp_model.py  mistral_api_model.py  mistral_mcp_model.py  ollama_api_model.py  ollama_mcp_model.py  openai_mcp_model.py
scripts/: check_licences.py
spec/: workflow-schema.json
tests/: __init__.py  conftest.py  e2e_haiku_synthesis.py  e2e_local_execution.py  test_cli.py  test_config_hillstar_config.py  test_config_model_selector.py  test_config_provider_registry.py  test_config_setup_wizard.py  test_config_validator.py  test_connectivity_ping.py  test_cost_manager.py  test_credential_redactor.py  test_e2e_connectivity.py  test_e2e_haiku_synthesis.py  test_e2e_local_execution.py  test_e2e_workflow.py  test_execution_checkpoint.py  test_execution_config_validator.py  test_execution_cost_manager.py  test_execution_graph.py  test_execution_model_selector.py  test_execution_node_executor.py  test_execution_observability.py  test_execution_runner.py  test_execution_trace.py  test_governance_compliance.py  test_governance_enforcer.py  test_governance_hooks.py  test_governance_policy.py  test_governance_project_init.py  test_integration.py  test_licence_headers.py  test_licences.py  test_mcp_error_handling.py  test_model_selector.py  test_models_mcp_error_handling.py  test_node_executor.py  test_openai_auth_resolver.py  test_utils_credential_redactor.py  (+9 more)
tests/fixtures/: workflow_incomplete_compliance.json  workflow_missing_provider_config.json
utils/: __init__.py  credential_redactor.py  exceptions.py  json_output_viewer.py  openai_auth_resolver.py  report.py
workflows/: __init__.py  agent_scanner.py  auto_discover.py  discovery.py  model_presets.py  validator.py
(+9 files in other folders)
